Bug 922028 - Only intern iterator result object shapes in compileAndGo mode. r=jorendorff